# SmartBrain

./: .env.example  .eslintrc.json  .gitignore  Anchor.toml  BOOTSTRAP_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SMARTBRAIN_KNOWLEDGE.md  commitlint.config.js  docs-engine.config.json  eslint.config.js  package-lock.json  package.json  rust-toolchain.toml
.github/: dependabot.yml  labeler.yml
.github/copilot/: agent.yaml
.github/workflows/: apisec-scan.yml  ci.yml  codeql.yml  defender-for-devops.yml  dependency-review.yml  labeler.yml  lint.yml  model-lint.yml  model-validate.yml  release.yml
bots/SmartContractAudit/: README.md  index.js  payment.js  routes.js
bots/SmartContractDeploy/: README.md  index.js  payment.js  routes.js
datasets/: README.md
datasets/validation/: validate.js
docs/: COMPARISON.md  FAQ.md  FEATURES.md  ORVAL_DB.md  SELF_UPDATING_DOCS.md  TROUBLESHOOTING.md  index.md
inference/: README.md
inference/cli/: index.js
models/: README.md
models/metadata/: schema.json
programs/smart-brain/: Cargo.toml
programs/smart-brain/src/: error.rs  lib.rs  state.rs
programs/smart-brain/src/instructions/: execute.rs  initialize.rs  mod.rs  update.rs
scripts/: README.md  bootstrap.sh  validate-model.sh
src/: README.md
src/docs-engine/: auto-updater.js
src/node-audit/: index.js
src/orval-db/: index.js  memory-store.js  persistence.js  virtual-brain.js
tests/: README.md  docs-engine.test.js  node-audit.test.js  orval-db.test.js  smart-functions.test.js
tools/: README.md
training/: README.md
(+13 files in other folders)
